# ExyShell

./: Makefile  README.md  install_dependencies.py  meson.build
Exy-panel/: Makefile  main
Exy-panel/libdrawkit/: meson.build
Exy-panel/libwayland-unstable/: meson.build
Exy-panel/src/: main.vala
Exy-panel/src/components/: app.vala  panel.vala  tray.vala  trayicon.vala
Exy-panel/src/components/trays/: clocktray.vala  trayicon.vala
Exy-panel/vapi/: libwayland-unstable.vapi
Kickoff/: Makefile  main
Kickoff/src/: animation.vala  appentry.vala  applauncher.vala  iconutils.vala  keyboard.vala  main.vala  mathutils.vala  processor.vala  search.vala  searchdb.vala  utils.config.vala  utils.icons.vala  utils.system.vala
Kickoff/src/components/: appentry.vala  gridview.vala  interactable.vala  navigation.vala  searchbar.vala  searchgridview.vala
Kickoff/src/utils/: config.vala  icon.vala  image.vala  math.vala  span.vala  system.vala
Kickoff/vapi/: libdrawkit.vapi  libwayland-unstable.vapi
Skia/: main.cpp
callback/: lib.c  main  main.vala
example/: Makefile  main.c  panel
example2/: main
example2/src/: main.vala  uilayout.vala
example2/vapi/: drawkit.vapi  liblayershell.vapi
example4/: Makefile  drawingarea.vala  icon.vala  main  main.vala
example4/toplevel/: toplevel.c  toplevel.h  toplevel.vala  toplevel.vapi
libdrawkit/: backend.c  backend.h  meson.build  shaders.c  structures.h
libdrawkit/shaders/text/: frag.glsl  vert.glsl
libdrawkit/shaders/texture/: frag.glsl  vert.glsl
libgfx/: main.c  panel  texture.c  texture.h
liblayershell/: liblayershell.c  liblayershell.h  main.c  meson.build  seat.c  seat.h
liblayershell/include/: layershell.h  liblayershell.h  toplevel.h
liblayershell/src/: registry.c  string_ex.c
liblayershell/wayland_features/: seat.c  seat.h  toplevel.c  toplevel.h
liblayershell/wayland_modules/: toplevel.h
libwayland-unstable/: main.c  meson.build
libwayland-unstable/protocols/: layershell.c  layershell.h  seat.c  seat.h  toplevel.c
src/: draw.c  draw.h  graphics.c  graphics.h  hover.c  hover.h  layout.c  texture.c  texture.h
vala/: Makefile
vala/src/: main.vala
vala/src/lib/: wayland.c
vala/vapi/: egl.vapi  wlr-layer-shell.vapi
vapi/: libdrawkit.vapi  libwayland-unstable.vapi  libwlhooks.vapi
wlhooks/: main.c  meson.build  registry.c  wlhooks.h
wlhooks/protocols/: layershell.c  layershell.h  output.c  output.h  screencopy.c  seat.c  seat.h
